--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,6 +3,7 @@ name: tests
 on:
   push:
   pull_request:
+  workflow_dispatch:
   schedule:
     - cron: '0 0 * * *'
 
@@ -62,7 +63,7 @@ jobs:
         with:
           timeout_minutes: 5
           max_attempts: 5
-          command: composer require laravel/framework"^11.0 --no-interaction --no-update
+          command: composer require laravel/framework:^11.0 --no-interaction --no-update
         if: matrix.php >= 8.2
 
       - name: Install dependencies
