--- a/.github/workflows/pull_request_tests_workflow.yml
+++ b/.github/workflows/pull_request_tests_workflow.yml
@@ -20,6 +20,9 @@ jobs:
           - 3306
         options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
     steps:
+      - uses: shivammathur/setup-php@v2
+        with:
+          php-version: '8.3'
       - uses: actions/checkout@v4
 
       - name: Copy .env
@@ -28,13 +31,16 @@ jobs:
       - name: Install Composer Dependencies
         run: composer install -q --no-ansi --no-interaction --no-scripts --no-suggest --no-progress --prefer-dist
 
+      - name: Directory Permissions
+        run: chmod -R 777 storage bootstrap/cache
+
       - name: Install NPM Dependencies
         run: npm install
 
       - name: Generate key
         run: php artisan key:generate
 
-      - name: Execute tests (Unit and Feature tests) using Pest
+      - name: Execute tests (Unit and Feature tests) via Pest
         env:
           DB_PORT: ${{ job.services.mysql.ports[3306] }}
-        run: ./vendor/bin/pest --bail
+        run: php artisan test
