--- a/.github/workflows/push_workflow.yml
+++ b/.github/workflows/push_workflow.yml
@@ -25,9 +25,7 @@ jobs:
           fetch-depth: 1
 
       - name: Copy .env
-        run: |
-          php -r "file_exists('.env') || copy('.env.example', '.env');"
-          cp .env.ci .env
+        run: php -r "file_exists('.env') || copy('.env.example', '.env');"
 
       - name: Install Composer Dependencies
         run: composer install -q --no-ansi --no-interaction --no-scripts --no-suggest --no-progress --prefer-dist
